git conduit environment_variable

--- a/docs/linux/shell/文件重定向.md
+++ b/docs/linux/shell/文件重定向.md
@@ -13,11 +13,11 @@
 #### 重定向命令列表
 | 命令 | 说明 |
 |--|--|
-`command > file`|	将stdout重定向到file中
-`command < file`|	将stdin重定向到file中
-`command >> file`|	将stdout以追加方式重定向到file中
-`command n> file`|	将文件描述符n重定向到file中
-`command n>> file`|	将文件描述符n以追加方式重定向到file中
+`command > file`|	将`stdout`重定向到`file`中
+`command < file`|	将`stdin`重定向到`file`中
+`command >> file`|	将`stdout`以追加方式重定向到`file`中
+`command n> file`|	将文件描述符`n`重定向到`file`中
+`command n>> file`|	将文件描述符`n`以追加方式重定向到`file`中
 
 ---
 
