--- a/docs/leetcode/1.md
+++ b/docs/leetcode/1.md
@@ -1,6 +1,5 @@
-#### 原题链接
 
-[剑指 Offer 03. 数组中重复的数字](https://leetcode-cn.com/problems/shu-zu-zhong-zhong-fu-de-shu-zi-lcof/)
+[原题链接](https://leetcode-cn.com/problems/shu-zu-zhong-zhong-fu-de-shu-zi-lcof/)
 
 #### 题目描述：
 
