--- a/docs/algorithm/leetcode/1.md
+++ b/docs/algorithm/leetcode/1.md
@@ -31,11 +31,11 @@
 
 #### 提示：
 
-- `2 <= nums.length <= 104`
+- 2 <= nums.length <= $10^4$
 
-- `-109 <= nums[i] <= 109`
+- $-10^9$ <= nums[i] <= $10^9$
 
-- `-109 <= target <= 109`
+- $-10^9$ <= target <= $10^9$
 
 - **只会存在一个有效答案**
 
@@ -45,7 +45,7 @@
 
 #### 思路
 
-1. 首先说一个$O(n^2)$的做法。在遍历到每一个数的时候，再遍历一遍数组，找到相加等于`target`的时候，返回两数坐标。注意，两下标不能**相等**
+首先说一个$O(n^2)$的做法。在遍历到每一个数的时候，再遍历一遍数组，找到相加等于`target`的时候，返回两数坐标。注意，两下标不能**相等**
 
 ```cpp
 // C++
@@ -68,7 +68,7 @@ public:
 };
 ```
 
-2. 仔细观察，能不能找到一种在$O(1)$的复杂度内找到**当前数**在整个数组中对应的数，使它们的和为`target`？答案是可以。快速查找可以联想到建立哈希表。通过遍历数组，查找哈希表内是否存在与之对应的和为`target`的数。若存在，`break`；反之，将当前数插入到哈希表内。由于不用对哈希表排序，所以使用无序哈希，时间复杂度为$O(n)$
+仔细观察，能不能找到一种在$O(1)$的复杂度内找到**当前数**在整个数组中对应的数，使它们的和为`target`？答案是可以。快速查找可以联想到建立哈希表。通过遍历数组，查找哈希表内是否存在与之对应的和为`target`的数。若存在，`break`；反之，将当前数插入到哈希表内。由于不用对哈希表排序，所以使用无序哈希，时间复杂度为$O(n)$
 
 === "C++"
 
