--- a/docs/algorithm/leetcode/150.md
+++ b/docs/algorithm/leetcode/150.md
@@ -39,13 +39,12 @@
 = 17 + 5
 = 22
 ```
- 
 
 #### 提示：
 
-- $1$ <= `tokens.length` <= $10^4$
+- $1$ $≤$ $tokens.length$ $≤$ $10^4$
 
-- `tokens[i]` 是一个算符（`"+"`、`"-"`、`"*"` 或 `"/"`），或是在范围 `[-200, 200]` 内的一个整数
+- $tokens[i]$ 是一个算符（`"+"`、`"-"`、`"*"` 或 `"/"`），或是在范围 $[-200, 200]$ 内的一个整数
  
 
 #### 逆波兰表达式：
@@ -68,9 +67,12 @@
 
 ###### 栈操作&emsp; $O(n)$
 
-通过逆波兰表达式的特点，可知：遍历所有元素。如果当前元素是整数，则压入栈内；如果是运算符，将栈顶两个元素取出并做相应的运算，最后把结果压入栈内。
+通过逆波兰表达式的特点，可知：遍历所有元素。
 
-扫描完成后，栈内的数就是结果且仅有一个。
+- 如果当前元素是整数，则压入栈内；
+- 如果是运算符，将栈顶两个元素取出并做相应的运算，最后把结果压入栈内。
+
+扫描完成后，栈内的数就是结果，**有且仅有一个**。
 
 时间复杂度分析：每个元素仅被遍历一次，且每次遍历时仅涉及常数次操作，所以时间复杂度是 $O(n)$ 。
 
