--- a/docs/algorithm/leetcode/1603.md
+++ b/docs/algorithm/leetcode/1603.md
@@ -31,11 +31,11 @@ parkingSystem.addCar(1); // 返回 false ，因为没有空的大车位，唯一
 
 #### 提示：
 
-- `0 <= big, medium, small <= 1000`
+- $0$ $≤$ $big$ , $medium$ , $small$ $≤$ 1000
 
-- `carType` 取值为 `1`， `2` 或 `3`
+- $carType$ 取值为 $1$ ， $2$  或 $3$
 
-- 最多会调用 `addCar` 函数 `1000` 次
+- 最多会调用 `addCar` 函数 $1000$ 次
 
 ---
 
