--- a/docs/algorithm/leetcode/206.md
+++ b/docs/algorithm/leetcode/206.md
@@ -30,9 +30,9 @@
 
 #### 提示：
 
-- 链表中节点的数目范围是 `[0, 5000]`
+- 链表中节点的数目范围是 $[0, 5000]$
 
-- `-5000 <= Node.val <= 5000`
+- $-5000$ $≤$ $Node.val$ $≤$ $5000$
  
 
 **进阶：**链表可以选用迭代或递归方式完成反转。你能否用两种方法解决这道题？
