--- a/docs/algorithm/mst/17_21.md
+++ b/docs/algorithm/mst/17_21.md
@@ -3,7 +3,7 @@
 #### 题目描述
 给定一个直方图(也称柱状图)，假设有人从上面源源不断地倒水，最后直方图能存多少水量?直方图的宽度为 1。
 
-![样例](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/10/22/rainwatertrap.png)
+![样例](./img/rainwatertrap.png)
 
 上面是由数组 [0,1,0,2,1,0,1,3,2,1,2,1] 表示的直方图，在这种情况下，可以接 6 个单位的水（蓝色部分表示水）。 
 
