--- a/docs/algorithm/segmentTree/2.md
+++ b/docs/algorithm/segmentTree/2.md
@@ -1,4 +1,4 @@
-[原题链接](https://www.acwing.com/problem/content/1277/)
+[原题链接](https://www.luogu.com.cn/problem/P1198)
 
 #### 题目简述
 给定一个正整数数列 $a_1,a_2,…,a_n$，每一个数都在 $0∼p−1$ 之间。
@@ -17,7 +17,7 @@
 
 ![题目描述](./img/%E6%9C%80%E5%A4%A7%E5%80%BC.jpg)
 
-**详情请见[原题](https://www.acwing.com/problem/content/1277/)**
+**详情请见[原题](https://www.luogu.com.cn/problem/P1198)**
 
 ---
 
