--- a/docs/algorithm/leetcode/713.md
+++ b/docs/algorithm/leetcode/713.md
@@ -1,7 +1,7 @@
 [原题链接](https://leetcode-cn.com/problems/subarray-product-less-than-k/)
 
 #### 题目描述
-给定一个正整数数组 $nums$ 和整数 $k$ 。
+给定一个正整数数组 `nums` 和整数 `k` 。
 
 请找出该数组内**乘积小于** $k$ 的**连续的子数组**的个数。
 
@@ -57,9 +57,9 @@ $$\prod_{i=left}^{right} nums[i] < k$$
 
 可以得出，有 $length$ 个 $1$，最终个数为 $length$，即 $right-left+1$。
 
-#### 时间复杂度：一重枚举所有的right端点，而left只需要移动n次，所以时间复杂度为 $O(n)$。
+**时间复杂度：**一重枚举所有的right端点，而left只需要移动n次，所以时间复杂度为 $O(n)$。
 
-#### 空间复杂度：只会用到常数个变量，所以为 $O(1)$。
+**空间复杂度：**只会用到常数个变量，所以为 $O(1)$。
 
 ---
 
