--- a/docs/algorithm/segmentTree/3.md
+++ b/docs/algorithm/segmentTree/3.md
@@ -110,7 +110,7 @@ void pushup(int u) {
 
 - $tr[u].l = l;$
 - $tr[u].r = r;$
-- $tr[u].lmax = tr[u].rmax = tr[u].tmax = tr[u].sum = w[r]$
+- $tr[u].lmax = tr[u].rmax = tr[u].tmax = tr[u].sum = w[r];$
 
 同时，也要注意，每次递归完左右子节点后，要将当前父节点的信息修改，即 执行 `pushup(u)` 操作。
 ```cpp
@@ -156,7 +156,7 @@ int main() {
 易得知当前区间即为 $[x,x]$，题目要求该区间内至少含有一个数($l \le r$)，修改 $A[x]=y$，因此当前节点的 $tmax, lmax, rmax, sum$ 都为 $v=y=A[x]$。
 
 - $tr[u].l = tr[u].r = x;$
-- $tr[u].lmax = tr[u].rmax = tr[u].tmax = tr[u].sum = v$
+- $tr[u].lmax = tr[u].rmax = tr[u].tmax = tr[u].sum = v;$
 
 ```cpp
 void modify(int u, int x, int v) {
