--- a/docs/algorithm/segmentTree/7.md
+++ b/docs/algorithm/segmentTree/7.md
@@ -67,11 +67,11 @@ void pushup(int u) {
 
     - 若此次操作为乘上一个数 $c$
 
-        可以表示为 $(x+add)*mul*c$ 即 $(n+X)*X$ 的形式
+        可以表示为 $(x+add)*mul*c$ 即 $(x+X)*X$ 的形式
 
     - 若此次操作为加上一个数 $c$
 
-        $(x+add)*mul+c$ 不能写成 $(n+X)*X$ 的形式
+        $(x+add)*mul+c$ 不能写成 $(x+X)*X$ 的形式
 
     > *无法更新新的懒标记*
 
@@ -85,9 +85,9 @@ void pushup(int u) {
 
     - 若此次操作是乘上一个数 $c$
 
-        可以表示为 $(n*mul+add)*c$
+        可以表示为 $(x*mul+add)*c$
 
-        展开后为 $n*mul*c+add*c$
+        展开后为 $x*mul*c+add*c$
 
         **此时新的 $add$ 即为 $add*c$，新的 $mul$ 即为 $mul*c$**
 
