--- a/docs/algorithm/bit/1.md
+++ b/docs/algorithm/bit/1.md
@@ -52,9 +52,9 @@ int lowbit(int x) {
 ![add](https://cdn.acwing.com/media/article/image/2020/05/28/9584_8fcf6acaa0-%E6%A0%91%E7%8A%B6%E6%95%B0%E7%BB%84-add.png)
 
 ```cpp
-void add(int x, int c) {
+void add(int x, int k) {
     for (int i = x; i <= n; i += lowbit(i))
-        tr[i] += c;
+        tr[i] += k;
 }
 ```
 
