--- a/docs/algorithm/bit/2.md
+++ b/docs/algorithm/bit/2.md
@@ -20,16 +20,16 @@ const int N = 500010;
 int n, m;
 int tr[N];
 
-int lowbit(int x) {
+inline int lowbit(int x) {
 	return x & -x;
 }
 
-void add(int x, int k) {
+inline void add(int x, int k) {
 	for (int i = x; i <= n; i += lowbit(i))
 		tr[i] += k;
 }
 
-int sum(int x) {
+inline int sum(int x) {
 	int res = 0;
 	for (int i = x; i; i -= lowbit(i))
 		res += tr[i];
