--- a/docs/algorithm/bit/1.md
+++ b/docs/algorithm/bit/1.md
@@ -84,17 +84,19 @@ int sum(int x) {
 - `add(x, k)` 在第x个位置上加上k
 - `sum(x)` 求第1~x个元素的和
 
+> 在 `c/c++` 中，为了解决一些频繁调用的小函数大量消耗栈空间（栈内存）的问题，特别的引入了 `inline` 修饰符，表示为内联函数。
+
 ```cpp
-int lowbit(int x) {
+inline int lowbit(int x) {
     return x & (-x);
 }
 
-void add(int x, int k) {
+inline void add(int x, int k) {
     for (int i = x; i <= n; i += lowbit(i))
         tr[i] += k;
 }
 
-int sum(int x) {
+inline int sum(int x) {
     int res = 0;
     for (int i = x; i; i -= lowbit(i))
         res += tr[i];
