--- a/docs/algorithm/bit/4.md
+++ b/docs/algorithm/bit/4.md
@@ -58,12 +58,12 @@ inline int lowbit(int x) {
 	return x & -x;
 }
 
-void add(int x, int k) {
+inline void add(int x, int k) {
 	for (int i = x; i <= n; i += lowbit(i))
 		tr[i] += k;
 }
 
-int sum(int x) {
+inline int sum(int x) {
 	int res = 0;
 	for (int i = x; i; i -= lowbit(i))
 		res += tr[i];
