--- a/docs/algorithm/dsu/1.md
+++ b/docs/algorithm/dsu/1.md
@@ -127,7 +127,7 @@ $A(m, n) = \begin{cases}n+1&\text{if }m=0\\A(m-1,1)&\text{if }m>0\text{ and }n=0
 
 ## 经典题目
 
-[「NOI2015」程序自动分析](https://uoj.ac/problem/127)
+[「NOI2015」程序自动分析](https://www.luogu.com.cn/problem/P1955)
 
 [「JSOI2008」星球大战](https://www.luogu.com.cn/problem/P1197)
 
