--- a/docs/algorithm/dsu/1.md
+++ b/docs/algorithm/dsu/1.md
@@ -12,9 +12,9 @@
 ## 初始化
 ```cpp
 void makeSet(int size) {
-    for (int i = 0; i < size; i++) fa[i] = i;  // i 就在它本身的集合里
-    return;
-    }
+    for (int i = 0; i < size; i++) 
+        fa[i] = i;  // i 就在它本身的集合里
+}
 ```
 
 ## 查找
