--- a/docs/algorithm/dsu/3.md
+++ b/docs/algorithm/dsu/3.md
@@ -1,5 +1,7 @@
 [原题链接](https://www.luogu.com.cn/problem/P1197)
 
+[相似题目-Graph Destruction](https://atcoder.jp/contests/abc229/tasks/abc229_e)
+
 #### 题目详情
 ![xqdz](./img/xqdz.png)
 
