--- a/docs/algorithm/math/1.md
+++ b/docs/algorithm/math/1.md
@@ -161,3 +161,31 @@ int lcm(int a, int b) {
     return a * b / gcd(a, b);
 }
 ```
+
+---
+
+## 快速幂
+```cpp
+// 求 m^k mod p，时间复杂度 O(logk)。
+
+int qmi(int m, int k, int p) {
+    int res = 1 % p, t = m;
+    while (k) {
+        if (k&1) res = res * t % p;
+        t = t * t % p;
+        k >>= 1;
+    }
+    return res;
+}
+```
+
+### 快速幂求逆元
+乘法逆元的定义
+
+> 若整数 $b$，$m$ 互质，并且对于任意的整数 $a$，如果满足 $b\mid a$，则存在一个整数 $x$，使得 $a/b\equiv a\times x(\bmod m)$，则称 $x$ 为 $b$ 的模 $m$ 乘法逆元，记为 $b^{−1}(\bmod m)$。
+
+> $b$ 存在乘法逆元的充要条件是 $b$ 与模数 $m$ 互质。当模数 $m$ 为质数时，$b^{m−2}$ 即为 $b$ 的乘法逆元。
+
+```cpp
+std::cout << qmi(b, m - 2, m) << '\n';
+```
