--- a/docs/web/html/3.md
+++ b/docs/web/html/3.md
@@ -13,3 +13,13 @@ HTML `<img>` 元素将一份图像嵌入文档。
 ### `width`属性
 图像的宽度，在 HTML5 中单位是 CSS 像素， 在 HTML 4 中可以是像素也可以是百分比。
 
+---
+
+### 示例
+#### 代码
+```html
+<img src="https://pjmcode.top/static/image/favicon.png" width="300" alt="logo">
+```
+
+#### 结果
+<img src="https://pjmcode.top/static/image/favicon.png" width="300" alt="logo">
