--- a/docs/web/html/4.md
+++ b/docs/web/html/4.md
@@ -1,13 +1,13 @@
 ### `<audio>`标签
 HTML `<audio>` 元素用于在文档中嵌入音频内容。 `<audio>` 元素可以包含一个或多个音频资源， 这些音频资源可以使用 src 属性或者`<source>` 元素来进行描述：浏览器将会选择最合适的一个来使用。也可以使用 MediaStream 将这个元素用于流式媒体。
 
-- 使用src属性播放
+- 使用`src`属性播放
 
     示例：
     ```html
     <audio
         controls
-        src="/audios/bgm.mp3">
+        src="audios/sndqd.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio>
@@ -42,3 +42,28 @@ HTML `<video>` 元素 用于在 HTML 或者 XHTML 文档中嵌入媒体播放器
     Sorry, your browser doesn't support embedded videos.
 </video>
 ```
+
+---
+
+### 示例
+#### 代码
+```html
+<audio controls>
+    <source src="https://pjmcode.top/static/audios/sndqd.mp3" type="audio/mpeg"/>
+</audio>
+
+<video controls width="800">
+    <source src="https://pjmcode.top/static/videos/mzd.mp4"
+            type="video/mp4">
+</video>
+```
+
+#### 结果
+<audio controls>
+    <source src="https://pjmcode.top/static/audios/sndqd.mp3" type="audio/mpeg"/>
+</audio>
+
+<video controls width="800">
+    <source src="https://pjmcode.top/static/videos/mzd.mp4"
+            type="video/mp4">
+</video>
