--- a/docs/dp/slope/2.md
+++ b/docs/dp/slope/2.md
@@ -44,7 +44,7 @@ $$dp[i]=t[i]\times c[i]+S\times c[n]+\min\{dp[j]-c[j]\times(t[i]+S)\}_{(0\le j\l
 因此，不妨令 $\begin{cases}
 y(j)=dp[j] \\
 x(j)=c[j] \\
-k=t[i]+S
+k_i=t[i]+S
 \end{cases}$ ，则该函数可视为 $y(j)-x(j)\times k$
 
 以下为了方便阅读，把 $y(j)$ 简写为 $y$，$x(j)$ 简写为 $x$。
@@ -142,8 +142,8 @@ int main() {
 		dp[i] = t[i] * c[i] + s * c[n] + dp[j] - c[j] * (t[i] + s);
 		
 		// insert
-		while (hh < tt 
-                && (dp[q[tt]] - dp[q[tt - 1]]) * (c[i] - c[q[tt]]) >= (dp[i] - dp[q[tt]]) * (c[q[tt]] - c[q[tt - 1]])) tt--;
+		while (hh < tt && (dp[q[tt]] - dp[q[tt - 1]]) * (c[i] - c[q[tt]]) >= 
+                (dp[i] - dp[q[tt]]) * (c[q[tt]] - c[q[tt - 1]])) tt--;
 		q[++tt] = i;
     }
     
