--- a/docs/graph/topo/1.md
+++ b/docs/graph/topo/1.md
@@ -47,7 +47,7 @@
 
 可以参考该图
 
-![topo](https://oiwiki.org/graph/images/topo-example.svg)
+![topo](https://oi-wiki.org/graph/images/topo-example.svg)
 
 对其排序的结果就是：2 -> 8 -> 0 -> 3 -> 7 -> 1 -> 5 -> 6 -> 9 -> 4 -> 11 -> 10 -> 12
 
