--- a/docs/math/euler/1.md
+++ b/docs/math/euler/1.md
@@ -59,6 +59,18 @@ int phi(int x) {
 ```
 
 ## 筛法求欧拉函数
+> $1$~$N$中与 $N$ 互质的数的个数被称为欧拉函数，记为$ϕ(N)$。
+
+>若在算数基本定理中，$N=p_1^{α1}p_2^{α2}···p_k^{αk}$，则：
+
+>$ϕ(N)=N∗\frac{p1−1}{p1}∗\frac{p2−1}{p2}∗…∗\frac{pk−1}{pk}$
+
+- 质数i的欧拉函数即为`phi[i] = i - 1`。
+- `phi[primes[j] * i]`分为两种情况：
+    1. `i % primes[j] == 0`：`primes[j]`是 `i` 的最小质因子，也是`primes[j] * i`的最小质因子，因此`1 - 1 / primes[j]`这一项在`phi[i]`中计算过了，只需将基数`N`修正为`primes[j]`倍，最终结果为`phi[i] * primes[j]`。
+    2. `i % primes[j] != 0`：`primes[j]`不是 `i` 的质因子，只是`primes[j] * i`的最小质因子，因此不仅需要将基数`N`修正为`primes[j]`倍，还需要补上`1 - 1 / primes[j]`这一项，因此最终结果`phi[i] * (primes[j] - 1)`。
+
+
 ```cpp
 int primes[N], cnt;     // primes[]存储所有素数
 int euler[N];           // 存储每个数的欧拉函数
