--- a/docs/tools/4.md
+++ b/docs/tools/4.md
@@ -65,3 +65,90 @@ struct Manacher {
 	}
 };
 ```
+
+### 模运算
+```cpp
+using i64 = long long;
+
+const int P = 998244353;
+
+// assume -P <= x < 2P
+int norm(int x) {
+	if (x < 0) {
+		x += P;
+	}
+	if (x >= P) {
+		x -= P;
+	}
+	return x;
+}
+template<class T>
+T power(T a, i64 b) {
+	T res = 1;
+	for (; b; b /= 2, a *= a) {
+		if (b % 2) {
+			res *= a;
+		}
+	}
+	return res;
+}
+struct Z {
+	int x;
+	Z(int x = 0) : x(norm(x)) {}
+	Z(i64 x) : x(norm(x % P)) {}
+	int val() const {
+		return x;
+	}
+	Z operator-() const {
+		return Z(norm(P - x));
+	}
+	Z inv() const {
+		assert(x != 0);
+		return power(*this, P - 2);
+	}
+	Z &operator*=(const Z &rhs) {
+		x = i64(x) * rhs.x % P;
+		return *this;
+	}
+	Z &operator+=(const Z &rhs) {
+		x = norm(x + rhs.x);
+		return *this;
+	}
+	Z &operator-=(const Z &rhs) {
+		x = norm(x - rhs.x);
+		return *this;
+	}
+	Z &operator/=(const Z &rhs) {
+		return *this *= rhs.inv();
+	}
+	friend Z operator*(const Z &lhs, const Z &rhs) {
+		Z res = lhs;
+		res *= rhs;
+		return res;
+	}
+	friend Z operator+(const Z &lhs, const Z &rhs) {
+		Z res = lhs;
+		res += rhs;
+		return res;
+	}
+	friend Z operator-(const Z &lhs, const Z &rhs) {
+		Z res = lhs;
+		res -= rhs;
+		return res;
+	}
+	friend Z operator/(const Z &lhs, const Z &rhs) {
+		Z res = lhs;
+		res /= rhs;
+		return res;
+	}
+	friend std::istream &operator>>(std::istream &is, Z &a) {
+		i64 v;
+		is >> v;
+		a = Z(v);
+		return is;
+	}
+	friend std::ostream &operator<<(std::ostream &os, const Z &a) {
+		return os << a.val();
+	}
+};
+```
