add rating & cf 7,8

--- a/docs/algorithm/problem/1.md
+++ b/docs/algorithm/problem/1.md
@@ -1,11 +1,10 @@
 [Absolute Sorting](https://codeforces.com/contest/1772/problem/D)
 
-You are given an array a consisting of n integers. The array is sorted if $a_1≤a_2≤⋯≤a_n$.
 
-You want to make the array a sorted by applying the following operation exactly once:
+### 题意
+给定一个乱序数组，判断是否存在一个数值x，让这个数组减去x后非递减排序。并且$a[i] = abs(a[i] - x)$。如果存在，输出x，否则输出-1。
 
-choose an integer x, then for every $i∈[1,n]$, replace ai by |ai−x|.
-Find any value of x that will make the array sorted, or report that there is no such value.
+*⭐rating: 1400*
 
 ---
 
