--- a/docs/algorithm/problem/2.md
+++ b/docs/algorithm/problem/2.md
@@ -1,7 +1,11 @@
 [Lucky Chains](https://codeforces.com/contest/1766/problem/D)
 
-### 题目大意
+### 题意
 给一对数 $(x,y)$，找到最小的 $k(k\ge 0)$ 满足 $\gcd(x+k,y+k)\ne 1$。
+
+*⭐rating: 1600*
+
+---
 
 ### 分析
 令 $\gcd(x+k,y+k)=g$，那么 $(y+k)-(x+k)=y-x$ 同样也可以被 $g$ 整除，就是说 $\gcd(x+k,y-x)=h$ 可以被 $g$ 整除；回到 $\gcd(x+k,y-x)=h$ 那么 $(x+k)+(y-x)=y+k$ 也可以被 $h$ 整除，那么 $\gcd(x+k,y+k)=g$ 可以被 $h$ 整除。
