--- a/docs/algorithm/problem/3.md
+++ b/docs/algorithm/problem/3.md
@@ -1,7 +1,11 @@
 [原题链接](https://codeforces.com/contest/1730/problem/B)
 
-### 题目大意
+### 题意
 有 $n$ 个人要到一个地方集合，每人要从 $x[i]$ 出发，出发前要打扮 $t[i]$ 分钟，走一单位的距离要花费 $1$ 时间，求最合适的集合的位置,使得集合所需的时间最少。
+
+*⭐rating: 1600*
+
+---
 
 ### 分析1 (bi-search)
 我们可以二分集合所需要的最小时间 $T$，如果在 $T$ 时间内所有人可以到达集合点，那么对于 $\forall x>0$，在 $T+x$ 的时间内都可以到达该集合点，因此具有二段性，可以进行二分搜索。
