--- a/docs/algorithm/problem/4.md
+++ b/docs/algorithm/problem/4.md
@@ -3,6 +3,10 @@
 ### 题意
 给定一长度为 $n$ 的数组，你可以进行 $k$ 次操作任意改变数组的一个值 $[1,10^9]$，用该数组构建一张无向稠密图，对于任意 $[l, r]$ 两点之间的路径长度为数组 $a$ 上 $[l, r]$ 范围内的最小值。求操作后该图上两个点之间最短路的最大值。
 
+*⭐rating: 2000*
+
+---
+
 ### 分析
 
 #### 图的性质
