--- a/docs/algorithm/problem/5.md
+++ b/docs/algorithm/problem/5.md
@@ -11,6 +11,10 @@
 - 元素数值是 $[1,m]$ 之间的整数。
 - 有两种或以上的策略，可以将数组清空。
 
+*⭐rating: 1900*
+
+---
+
 ### 分析
 有一种显而易见的策略，即每次选取第一个数，将其删除。这样的数组总共有 $m^1+m^2+...+m^n=total$ 个。满足两种及以上的策略的数组也包含其中，此时只需要减去只满足一种策略的数组的数量即可。
 
