--- a/docs/tools/4.md
+++ b/docs/tools/4.md
@@ -152,3 +152,34 @@ struct Z {
 	}
 };
 ```
+
+### 求欧拉函数
+```cpp
+// get phi
+std::vector<int> phi(n + 1);
+	std::iota(phi.begin(), phi.end(), 0);
+
+	for (int i = 1; i <= n; i++) {
+		for (int j = 2 * i; j <= n; j += i) {
+			phi[j] -= phi[i];
+		}
+	}
+```
+
+### 组合数（预处理O(n)，求值O(1)）
+
+$C_a^b$
+
+```cpp
+std::vector<Z> fac(n + 1), invfac(n + 1);
+    fac[0] = 1;
+    for (int i = 1; i <= n; i++) {
+        fac[i] = fac[i - 1] * i;
+    }
+    invfac[n] = fac[n].inv();
+    for (int i = n; i; i--) {
+        invfac[i - 1] = invfac[i] * i;
+    }
+
+	res = fac[a] * invfac[b] * invfac[a - b]; 
+```
