--- a/docs/tools/4.md
+++ b/docs/tools/4.md
@@ -1,71 +1,34 @@
-### 马拉车
+## 数据结构
+### 并查集
 ```cpp
-char s[maxn];
-const int mod[] = { 19260817, 19660813 };
-const int base[] = {233, 5};
-int Hash[2][maxn], f[2][maxn];
-
-struct Manacher {
-	int lc[maxn];
-	char ch[maxn];
-	int N;
-	Manacher(char *s) {
-		init(s);
-		manacher();
-		initHash();
+#include <numeric> // itoa()
+struct DSU {
+	std::vector<int> f, siz;
+	DSU(int n) : f(n), siz(n, 1) {
+		std::iota(f.begin(), f.end(), 0);
 	}
-	void init(char *s) {
-		int n = strlen(s + 1);
-		ch[n * 2 + 1] = '#';
-		ch[0] = '@';
-		ch[n * 2 + 2] = '\0';
-		for (int i = n; i >= 1; i--) {
-			ch[i * 2] = s[i];
-			ch[i * 2 - 1] = '#';
-		}
-		N = 2 * n + 1;
-		f[0][0] = f[1][0] = 1;
-		for (int j = 0; j < 2; j++) {
-			for (int i = 1; i <= N; i++) {
-				f[j][i] = f[j][i - 1] * base[j] % mod[j];
-			}
-		}
+	int leader(int x) {
+		while (x != f[x]) x = f[x] = f[f[x]];
+		return x;
 	}
-	void initHash() {
-		Hash[0][0] = Hash[1][0] = 0;
-		for (int j = 0; j < 2; j++) {
-			for (int i = 1; i <= N; i++) {
-				Hash[j][i] = (Hash[j][i - 1] * base[j] + (ch[i] - 'a' + 1)) % mod[j];
-			}
-		}
+	bool same(int x, int y) {
+		return leader(x) == leader(y);
 	}
-	pair<int, int>getHash(int l, int r) {
-		return make_pair((Hash[0][r] - (Hash[0][l - 1] * f[0][r - l + 1]) % mod[0] + mod[0]) % mod[0],
-		                 (Hash[1][r] - (Hash[1][l - 1] * f[1][r - l + 1]) % mod[1] + mod[1]) % mod[1]);
+	bool merge(int x, int y) {
+		x = leader(x);
+		y = leader(y);
+		if (x == y) return false;
+		siz[x] += siz[y];
+		f[y] = x;
+		return true;
 	}
-	void manacher() {
-		lc[1] = 1;
-		int k = 1;
-		for (int i = 2; i <= N; i++) {
-			int p = k + lc[k] - 1;
-			if (i <= p) {
-				lc[i] = min(lc[2 * k - i], p - i + 1);
-			} else {
-				lc[i] = 1;
-			}
-			while (ch[i + lc[i]] == ch[i - lc[i]])lc[i]++;
-			if (i + lc[i] > k + lc[k])k = i;
-		}
-	}
-	void debug() {
-		puts(ch);
-		for (int i = 1; i <= N; i++) {
-			printf("lc[%d]=%d\n", i, ch[i]);
-		}
+	int size(int x) {
+		return siz[leader(x)];
 	}
 };
 ```
 
+## 数论
 ### 模运算
 ```cpp
 using i64 = long long;
@@ -157,13 +120,13 @@ struct Z {
 ```cpp
 // get phi
 std::vector<int> phi(n + 1);
-	std::iota(phi.begin(), phi.end(), 0);
+std::iota(phi.begin(), phi.end(), 0);
 
-	for (int i = 1; i <= n; i++) {
-		for (int j = 2 * i; j <= n; j += i) {
-			phi[j] -= phi[i];
-		}
+for (int i = 1; i <= n; i++) {
+	for (int j = 2 * i; j <= n; j += i) {
+		phi[j] -= phi[i];
 	}
+}
 ```
 
 ### 组合数（预处理O(n)，求值O(1)）
@@ -172,14 +135,152 @@ $C_a^b$
 
 ```cpp
 std::vector<Z> fac(n + 1), invfac(n + 1);
-    fac[0] = 1;
-    for (int i = 1; i <= n; i++) {
-        fac[i] = fac[i - 1] * i;
-    }
-    invfac[n] = fac[n].inv();
-    for (int i = n; i; i--) {
-        invfac[i - 1] = invfac[i] * i;
-    }
+void init() {
+	fac[0] = 1;
+	for (int i = 1; i <= n; i++) {
+		fac[i] = fac[i - 1] * i;
+	}
+	invfac[n] = fac[n].inv();
+	for (int i = n; i; i--) {
+		invfac[i - 1] = invfac[i] * i;
+	}
+}
 
-	res = fac[a] * invfac[b] * invfac[a - b]; 
+res = fac[a] * invfac[b] * invfac[a - b]; 
+```
+
+### 质数筛
+```cpp
+const int N = 1E6 + 10;
+ 
+int minp[N];
+std::vector<int> primes;
+
+void init() {
+	for (int i = 2; i < N; i++) {
+		if (minp[i] == 0) {
+			minp[i] = i;
+			primes.push_back(i);
+		}
+			
+		for (auto p : primes) {
+			if (i * p >= N) break;
+			minp[i * p] = p;
+			if (minp[i] == p) break;
+		}
+	}
+}
+```
+
+## 计算几何
+### 点乘与叉乘
+```cpp
+using T = double;
+struct Point {
+    T x;
+    T y;
+    Point(T x = 0, T y = 0) : x(x), y(y) {}
+     
+    Point &operator+=(const Point &p) {
+        x += p.x, y += p.y;
+        return *this;
+    }
+    Point &operator-=(const Point &p) {
+        x -= p.x, y -= p.y;
+        return *this;
+    }
+    Point &operator*=(const T &v) {
+        x *= v, y *= v;
+        return *this;
+    }
+    friend Point operator-(const Point &p) {
+        return Point(-p.x, -p.y);
+    }
+    friend Point operator+(Point lhs, const Point &rhs) {
+        return lhs += rhs;
+    }
+    friend Point operator-(Point lhs, const Point &rhs) {
+        return lhs -= rhs;
+    }
+    friend Point operator*(Point lhs, const T &rhs) {
+        return lhs *= rhs;
+    }
+};
+ 
+T dot(const Point &a, const Point &b) {
+    return a.x * b.x + a.y * b.y;
+}
+ 
+T cross(const Point &a, const Point &b) {
+    return a.x * b.y - a.y * b.x;
+}
+```
+
+## 字符串
+### 马拉车
+```cpp
+char s[maxn];
+const int mod[] = { 19260817, 19660813 };
+const int base[] = {233, 5};
+int Hash[2][maxn], f[2][maxn];
+
+struct Manacher {
+	int lc[maxn];
+	char ch[maxn];
+	int N;
+	Manacher(char *s) {
+		init(s);
+		manacher();
+		initHash();
+	}
+	void init(char *s) {
+		int n = strlen(s + 1);
+		ch[n * 2 + 1] = '#';
+		ch[0] = '@';
+		ch[n * 2 + 2] = '\0';
+		for (int i = n; i >= 1; i--) {
+			ch[i * 2] = s[i];
+			ch[i * 2 - 1] = '#';
+		}
+		N = 2 * n + 1;
+		f[0][0] = f[1][0] = 1;
+		for (int j = 0; j < 2; j++) {
+			for (int i = 1; i <= N; i++) {
+				f[j][i] = f[j][i - 1] * base[j] % mod[j];
+			}
+		}
+	}
+	void initHash() {
+		Hash[0][0] = Hash[1][0] = 0;
+		for (int j = 0; j < 2; j++) {
+			for (int i = 1; i <= N; i++) {
+				Hash[j][i] = (Hash[j][i - 1] * base[j] + (ch[i] - 'a' + 1)) % mod[j];
+			}
+		}
+	}
+	pair<int, int>getHash(int l, int r) {
+		return make_pair((Hash[0][r] - (Hash[0][l - 1] * f[0][r - l + 1]) % mod[0] + mod[0]) % mod[0],
+		                 (Hash[1][r] - (Hash[1][l - 1] * f[1][r - l + 1]) % mod[1] + mod[1]) % mod[1]);
+	}
+	void manacher() {
+		lc[1] = 1;
+		int k = 1;
+		for (int i = 2; i <= N; i++) {
+			int p = k + lc[k] - 1;
+			if (i <= p) {
+				lc[i] = min(lc[2 * k - i], p - i + 1);
+			} else {
+				lc[i] = 1;
+			}
+			while (ch[i + lc[i]] == ch[i - lc[i]])lc[i]++;
+			if (i + lc[i] > k + lc[k])k = i;
+		}
+	}
+	void debug() {
+		puts(ch);
+		for (int i = 1; i <= N; i++) {
+			printf("lc[%d]=%d\n", i, ch[i]);
+		}
+	}
+};
 ```
