alg-pro 2023牛客寒假3

--- a/docs/algorithm/problem/16.md
+++ b/docs/algorithm/problem/16.md
@@ -9,6 +9,8 @@
 
 证明:对于一个查询的点 $x$，设 $cnt_x$ 表示 $x$ 的出边数量。若 $cnt_x<\sqrt{m}$，则显然遍历所有出边的时间复杂度小于 $O(\sqrt{m})$；若 $cnt>\sqrt{m}$，由于 $x→y (d_x<d_y)$，则总边数最多为$cnt_x·d_y=m$，所以 $cnt_x$ 不超过 $\sqrt{m}$。
 
+时间复杂度 $O(m\sqrt{m})$
+
 ### 代码
 ```cpp
 #include <bits/stdc++.h>
