--- a/docs/tools/4.md
+++ b/docs/tools/4.md
@@ -163,6 +163,96 @@ struct Z {
 };
 ```
 
+```cpp
+using i64 = long long;
+template<class T>
+T power(T a, i64 b) {
+    T res = 1;
+    for (; b; b /= 2, a *= a) {
+        if (b % 2) {
+            res *= a;
+        }
+    }
+    return res;
+}
+ 
+template<int P>
+struct MInt {
+    int x;
+    MInt() : x{} {}
+    MInt(i64 x) : x{norm(x % P)} {}
+    
+    int norm(int x) {
+        if (x < 0) {
+            x += P;
+        }
+        if (x >= P) {
+            x -= P;
+        }
+        return x;
+    }
+    int val() const {
+        return x;
+    }
+    MInt operator-() const {
+        MInt res;
+        res.x = norm(P - x);
+        return res;
+    }
+    MInt inv() const {
+        assert(x != 0);
+        return power(*this, P - 2);
+    }
+    MInt &operator*=(const MInt &rhs) {
+        x = 1LL * x * rhs.x % P;
+        return *this;
+    }
+    MInt &operator+=(const MInt &rhs) {
+        x = norm(x + rhs.x);
+        return *this;
+    }
+    MInt &operator-=(const MInt &rhs) {
+        x = norm(x - rhs.x);
+        return *this;
+    }
+    MInt &operator/=(const MInt &rhs) {
+        return *this *= rhs.inv();
+    }
+    friend MInt operator*(const MInt &lhs, const MInt &rhs) {
+        MInt res = lhs;
+        res *= rhs;
+        return res;
+    }
+    friend MInt operator+(const MInt &lhs, const MInt &rhs) {
+        MInt res = lhs;
+        res += rhs;
+        return res;
+    }
+    friend MInt operator-(const MInt &lhs, const MInt &rhs) {
+        MInt res = lhs;
+        res -= rhs;
+        return res;
+    }
+    friend MInt operator/(const MInt &lhs, const MInt &rhs) {
+        MInt res = lhs;
+        res /= rhs;
+        return res;
+    }
+    friend std::istream &operator>>(std::istream &is, MInt &a) {
+        i64 v;
+        is >> v;
+        a = MInt(v);
+        return is;
+    }
+    friend std::ostream &operator<<(std::ostream &os, const MInt &a) {
+        return os << a.val();
+    }
+};
+ 
+constexpr int P = 1000000007;
+using Z = MInt<P>;
+```
+
 ### 求欧拉函数
 ```cpp
 // get phi
